--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "typescript": "^4.9.4",
