--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/styles": "^4.11.5",
+    "@mui/lab": "^5.0.0-alpha.117",
     "@mui/material": "^5.11.6",
+    "@mui/styles": "^5.11.2",
+    "@mui/x-data-grid": "^5.17.21",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,7 +20,10 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.2.5",
+    "bootstrap": "^5.3.0-alpha1",
+    "material-table": "^2.0.3",
     "react": "^18.2.0",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
